--- a/app/blocks/map/map.jade
+++ b/app/blocks/map/map.jade
@@ -24,7 +24,7 @@ mixin map()
 								+icon('work', true).address__work-icon  
 								| пн.-пт. 09:00 - 21:00, сб.-вс. 10:00 - 20:00
 							.address__buttons
-								button.address__button.button Маршрут
+								button.address__button.address__button_route.button( data-shop="0") Маршрут
 								a.address__button.button(href="tel:+78123209140") Позвонить
 
 						.map__item.address
@@ -36,7 +36,7 @@ mixin map()
 								+icon('work', true).address__work-icon  
 								| пн.-пт. 09:00 - 21:00, сб.-вс. 10:00 - 20:00
 							.address__buttons
-								button.address__button.button Маршрут
+								button.address__button.address__button_route.button( data-shop="1") Маршрут
 								a.address__button.button(href="tel:+78123209140") Позвонить
 
 						.map__item.address
@@ -48,7 +48,7 @@ mixin map()
 								+icon('work', true).address__work-icon  
 								| пн.-пт. 09:00 - 21:00, сб.-вс. 10:00 - 20:00
 							.address__buttons
-								button.address__button.button Маршрут
+								button.address__button.address__button_route.button( data-shop="2") Маршрут
 								a.address__button.button(href="tel:+78123209140") Позвонить
 
 						.map__item.address
@@ -60,7 +60,7 @@ mixin map()
 								+icon('work', true).address__work-icon  
 								| пн.-пт. 09:00 - 21:00, сб.-вс. 10:00 - 20:00
 							.address__buttons
-								button.address__button.button Маршрут
+								button.address__button.address__button_route.button( data-shop="3") Маршрут
 								a.address__button.button(href="tel:+78123209140") Позвонить
 
 						.map__item.address
@@ -72,7 +72,7 @@ mixin map()
 								+icon('work', true).address__work-icon  
 								| пн.-пт. 09:00 - 21:00, сб.-вс. 10:00 - 20:00
 							.address__buttons
-								button.address__button.button Маршрут
+								button.address__button.address__button_route.button(data-shop="4") Маршрут
 								a.address__button.button(href="tel:+78123209140") Позвонить
 
 
