--- a/app/blocks/featured/featured.jade
+++ b/app/blocks/featured/featured.jade
@@ -10,20 +10,20 @@ mixin featured()
 
 			.featured__tabs.tabs.tabs_featured
 				ul.tabs__nav
-					li.tabs__item.tabs__item_active
+					li.tabs__item
 						a.tabs__link() Популярное
 					li.tabs__item
 						a.tabs__link() Акция
 					li.tabs__item
 						a.tabs__link() Рекомендуем
-					li.tabs__item
+					li.tabs__item.active
 						a.tabs__link() Шины
 					li.tabs__item
 						a.tabs__link() Диски
 
 				.tabs__content
 
-					.tabs__tab.tabs__tab_active 
+					.tabs__tab
 
 						#popularSlider.featured__list
 							+cards()
@@ -39,7 +39,7 @@ mixin featured()
 							+cards()
 						#recommendNav.featured__nav
 
-					.tabs__tab
+					.tabs__tab.active
 
 						#tyresSlider.featured__list
 							+cards()
