--- a/app/blocks/popup/popup.jade
+++ b/app/blocks/popup/popup.jade
@@ -6,13 +6,13 @@ mixin popup-auth()
 		.popup__tabs.tabs.tabs_popup
 
 			ul.tabs__nav.popup__tabs-nav
-				li.tabs__item.tabs__item_active
+				li.tabs__item.active
 					a.tabs__link() Войти
 				li.tabs__item
 					a.tabs__link() Зарегистрироваться
 
 			.tabs__content
-				.tabs__tab.tabs__tab_active 
+				.tabs__tab.active 
 					.popup__auth.form.form_auth
 						form.form__w(action="", method="post")
 
