--- a/app/blocks/topline/topline.styl
+++ b/app/blocks/topline/topline.styl
@@ -47,7 +47,7 @@
 		+rmin($sm)
 			margin-left 18px
 			margin-right 40px
-		+rmin($xl)
+		+rmin($lg)
 			min-width 200px 
 			max-width 370px
 			flex-grow 0
